XML:choose avance de seleccion de seccion de menu

--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -87,14 +87,13 @@ html, body {
 }
 
 a {
-	color: #CCC;
-  text-decoration: none !important;
+    text-decoration: none !important;
 }
 a:hover {
 	color: #F99;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 { 
   margin-top: 0px;
   margin-bottom: 0px;
   color: #fff;
@@ -472,24 +471,24 @@ Header Style
   margin-left: 5px;
 }
 
-.header-area .main-nav .nav li.has-sub ul.sub-menu li:last-child a:hover,
-.background-header .main-nav .nav li.has-sub ul.sub-menu li:last-child a:hover {
+.header-area .main-nav  li.has-sub ul.sub-menu li:last-child a:hover,
+.background-header .main-nav  li.has-sub ul.sub-menu li:last-child a:hover {
   padding-left: 25px !important;
 }
 
-.header-area .main-nav .nav li:hover a,
-.header-area .main-nav .nav li a.active {
+.header-area .main-nav  li:hover a,
+.header-area .main-nav li a.active {
   color: #e75e8d !important;
 }
 
-.header-area .main-nav .nav li:last-child:hover a,
-.header-area .main-nav .nav li:last-child a.active {
+.header-area .main-nav  li:last-child:hover a,
+.header-area .main-nav li:last-child a.active {
   color: #fff !important;
   background-color: #e75e8d !important;
 }
 
-.background-header .main-nav .nav li:hover a,
-.background-header .main-nav .nav li a.active {
+.background-header .main-nav  li:hover a,
+.background-header .main-nav  li a.active {
   color: #fff;
   opacity: 1;
 }
